--- a/style.css
+++ b/style.css
@@ -5031,7 +5031,7 @@ height: 200px !important;
     
     }
 
-    
+
 /* AGREGADO LUCAS */ 
 
 
@@ -5083,3 +5083,9 @@ height: 200px !important;
 }
 
 }
+
+/* FIN AGREGADO LUCAS */ 
+
+/* FIN AGREGADO LUCAS */ 
+
+/* FIN AGREGADO LUCAS */ 
