--- a/style.css
+++ b/style.css
@@ -5086,13 +5086,7 @@ height: 200px !important;
 }
 
 .theme-my-login.container{
-    font-family: "Lato";
     margin: 50px auto;
-    max-width: 500px;
-    border-radius: 4px;
-    box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
-    background: #e7d117;
-    padding: 20px;
 }
 
 .theme-my-login .tml{
@@ -5100,6 +5094,11 @@ height: 200px !important;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    border-radius: 4px;
+    box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
+    background: #e7d117;
+    padding: 20px;
+    font-family: "Lato";
 }
 
 .tml .tml-field {
@@ -5128,6 +5127,12 @@ height: 200px !important;
     padding: 10px 20px;
     font-size: 17px;
     width: 100%;
+    transition: 300ms ease;
+}
+
+.tml-submit-wrap input:hover{
+    background: #fff;
+    box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
 }
 
 .tml-links{
