--- a/style.css
+++ b/style.css
@@ -5092,7 +5092,7 @@ height: 200px !important;
 .theme-my-login .tml{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
     border-radius: 4px;
     box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
