--- a/style.css
+++ b/style.css
@@ -5091,6 +5091,7 @@ height: 200px !important;
     grid-template-columns: 1fr 2fr;
     font-family: "Lato";
     padding: 20px;
+    grid-gap: 30px;
 }
 
 
