--- a/style.css
+++ b/style.css
@@ -5086,6 +5086,28 @@ height: 200px !important;
 
 /* FIN AGREGADO LUCAS */ 
 
-/* FIN AGREGADO LUCAS */ 
 
-/* FIN AGREGADO LUCAS */ 
+/* Home Link */
+
+.home-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    background: #b29f93;
+    box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
+}
+
+.home-link a{
+    width: 100%;
+    height: 100%;
+}
+
+.home-link a i{
+    font-size: 20px;
+    color: #fff;
+}
