--- a/style.css
+++ b/style.css
@@ -5093,13 +5093,14 @@ height: 200px !important;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
     bottom: 20px;
     right: 20px;
     width: 50px;
     height: 50px;
     background: #b29f93;
     box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
+    border-radius: 50%;
 }
 
 .home-link a{
