--- a/style.css
+++ b/style.css
@@ -5098,6 +5098,7 @@ height: 200px !important;
     background: #b29f93;
     box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
     border-radius: 50%;
+    z-index: 99999999999999;
 }
 
 .home-link a{
