--- a/style.css
+++ b/style.css
@@ -5093,8 +5093,8 @@ height: 200px !important;
     position: fixed;
     bottom: 20px;
     right: 20px;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     background: #b29f93;
     box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
     border-radius: 50%;
@@ -5107,6 +5107,13 @@ height: 200px !important;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #fff;
+}
+
+.home-link a:hover, .home-link a:active, .home-link a:focus, .home-link a:visited{
+    outline: 0;
+    background: transparent;
+    color: #fff;
 }
 
 .home-link a i{
