real real end home button

--- a/style.css
+++ b/style.css
@@ -5117,6 +5117,7 @@ height: 200px !important;
 }
 
 .home-link a i{
-    font-size: 20px;
+    font-size: 25px;
     color: #fff;
+    line-height: 0px;
 }
