--- a/style.css
+++ b/style.css
@@ -5159,6 +5159,11 @@ height: 200px !important;
     font-size: 25px;
 }
 
+.action-side p{
+    font-size: 20px;
+    margin: 5px 0;
+}
+
 /* Home Link */
 
 .home-link{
