--- a/style.css
+++ b/style.css
@@ -5155,15 +5155,32 @@ height: 200px !important;
     font-size: 25px;
 }
 
+.action-side{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
 .action-side h2{
     font-size: 25px;
 }
 
-.action-side p{
-    font-size: 20px;
-    margin: 5px 0;
+.action-side a{
+    box-shadow: 0px 1px 3px rgba(0,0,0,0.16);
 }
 
+.action-side a:hover{
+    color: #fff;
+    font-weight: normal;
+    padding: 10px 20px;
+    font-size: 17px;
+    width: 100%;
+    transition: 300ms ease;
+}
+
+.tml-login .tml-register-link{
+    display: none;
+}
 /* Home Link */
 
 .home-link{
