--- a/style.css
+++ b/style.css
@@ -5167,6 +5167,7 @@ height: 200px !important;
 
 .action-side a{
     box-shadow: 0px 1px 3px rgba(0,0,0,0.16);
+    margin-top: 30px;
 }
 
 .action-side a:hover{
@@ -5174,7 +5175,6 @@ height: 200px !important;
     font-weight: normal;
     padding: 10px 20px;
     font-size: 17px;
-    width: 100%;
     transition: 300ms ease;
 }
 
@@ -5187,6 +5187,7 @@ height: 200px !important;
     background: #f4f4f4;
     border-radius: 4px;
     box-shadow: 0px 1px 3px rgba(0,0,0,0.16);
+    margin: 0 auto;
 }
 /* Home Link */
 
