--- a/style.css
+++ b/style.css
@@ -5205,6 +5205,16 @@ height: 200px !important;
 .tml-indicator_hint-wrap{
     font-size: 20px;
 }
+
+.tml-links li a{
+    padding: 10px 15px;
+    background: #e7d117;
+    text-align: center;
+    display: inline-block;
+    font-weight: bold;
+    color: #fff;
+    margin-right: 10px;
+}
 /* Home Link */
 
 .home-link{
