--- a/style.css
+++ b/style.css
@@ -5207,13 +5207,19 @@ height: 200px !important;
 }
 
 .tml-links li a{
-    padding: 10px 15px;
+    padding: 5px 15px;
     background: #e7d117;
     text-align: center;
     display: inline-block;
     font-weight: bold;
     color: #fff;
     margin-right: 10px;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+.tml-links li a:hover{
+    box-shadow: 0px 1px 3px rgba(0,0,0,0.16);
 }
 /* Home Link */
 
