--- a/style.css
+++ b/style.css
@@ -5103,7 +5103,8 @@ height: 200px !important;
 
 @media (min-width: 768px){
     .tml-action-register .theme-my-login.container{
-        max-width: 60%;
+        max-width: 40%;
+        margin: 50px 0px;
     }
 }
 
