--- a/style.css
+++ b/style.css
@@ -5093,6 +5093,7 @@ height: 200px !important;
     margin: 50px auto;
     font-family: "Lato";
     padding: 20px;
+    max-width: 1100px;
 }
 
 .tml-action-login .theme-my-login.container{
