--- a/style.css
+++ b/style.css
@@ -5089,11 +5089,14 @@ height: 200px !important;
     display: none;
 }
 
+.tml-action #main{
+    max-width: 1100px;
+}
+
 .theme-my-login.container{
     margin: 50px auto;
     font-family: "Lato";
     padding: 20px;
-    max-width: 1100px;
 }
 
 .tml-action-login .theme-my-login.container{
@@ -5105,7 +5108,6 @@ height: 200px !important;
 @media (min-width: 768px){
     .tml-action-register .theme-my-login.container{
         max-width: 40%;
-        margin: 50px 0px;
     }
 }
 
