--- a/style.css
+++ b/style.css
@@ -5231,6 +5231,10 @@ height: 200px !important;
 .tml-links li a:hover{
     box-shadow: 0px 1px 3px rgba(0,0,0,0.16);
 }
+
+.tml-action-lostpassword p{
+    font-size: 20px;
+}
 /* Home Link */
 
 .home-link{
