--- a/style.css
+++ b/style.css
@@ -108,6 +108,11 @@ h2:before {
     font-weight: 400;
     background: #f4f4f4;
     color: #111;
+    transition: 300ms ease;
+}
+
+.top-bar .current-user-avatar .button:hover{
+    opacity: 0.8;
 }
 
 @media (max-width: 1100px){
