--- a/style.css
+++ b/style.css
@@ -111,6 +111,10 @@ h2:before {
     transition: 300ms ease;
 }
 
+.top-bar .current-user-avatar .button.login{
+    background: #e7d117;
+}
+
 .top-bar .current-user-avatar .button:hover{
     opacity: 0.8;
 }
