--- a/style.css
+++ b/style.css
@@ -119,6 +119,13 @@ h2:before {
     opacity: 0.8;
 }
 
+.top-bar .current-username{
+    color: #fff;
+    font-weight: 400;
+    font-size: 15px;
+    margin-left: 10px;
+}
+
 @media (max-width: 1100px){
     .top-bar{
         padding: 10px 20px;
