--- a/style.css
+++ b/style.css
@@ -5184,19 +5184,6 @@ height: 200px !important;
     box-shadow: 0px 1px 3px rgba(0,0,0,0.16);
 }
 
-.tml-links{
-    padding: 0px;
-    margin: 0px;
-    display: flex;
-    list-style-type: none;
-}
-
-.tml-links li a{
-    color: #111;
-    padding: 20px;
-    font-size: 18px;
-}
-
 .form-side h1, .tml-action h1{
     font-size: 25px;
 }
@@ -5243,6 +5230,17 @@ height: 200px !important;
     font-size: 12px;
 }
 
+.tml-links{
+    padding: 0px;
+    margin: 0px;
+    display: flex;
+    list-style-type: none;
+}
+
+.tml-links li{
+    width: 50%;
+}
+
 .tml-links li a{
     padding: 5px 15px;
     background: #f4f4f4;
@@ -5253,6 +5251,7 @@ height: 200px !important;
     margin-right: 10px;
     border-radius: 4px;
     font-size: 14px;
+    transition: 300ms ease;
 }
 
 .tml-links li a:hover{
