--- a/style.css
+++ b/style.css
@@ -5289,6 +5289,24 @@ height: 200px !important;
 .tml-action-lostpassword p{
     font-size: 18px;
 }
+
+/*Social providers */
+
+.tml-social-providers .tml-social-provider{
+    border: none;
+    box-shadow: 0px 1px 3px rgba(0,0,0,0.16);
+    border-radius: 4px;
+    font-size: 16px;
+    font-family: "Arial";
+}
+
+.tml-social-provider .tml-social-provider-icon{
+    border-right: 2px solid white;
+}
+
+.tml-social-provider .tml-social-provider-icon img{
+    vertical-align: top;
+}
 /* Home Link */
 
 .home-link{
