--- a/style.css
+++ b/style.css
@@ -5310,6 +5310,17 @@ height: 200px !important;
 .tml-social-providers-divider span{
     line-height: 1.7 !important;
 }
+
+.tml .tml-action-confirmaction .success, .tml .tml-error, .tml .tml-message, .tml .tml-success {
+    border-left: 4px solid #e7d117;
+    -webkit-box-shadow: 0px 1px 3px rgba(0,0,0,.1);
+    box-shadow: 0px 1px 3px rgba(0,0,0,.1);
+    display: block;
+    margin: 0 0 1em;
+    padding: 10px 15px;
+    font-size: 17px;
+    border-radius: 4px;
+}
 /* Home Link */
 
 .home-link{
