--- a/style.css
+++ b/style.css
@@ -4430,7 +4430,7 @@ SECCION AUTORES
     background-color: #ead637;
 }
 
-.ultimomomento-section .ultimo-momento a{
+.ultimomomento-section .ultimo-momento a h2{
     color: #111;
 }
 
