--- a/style.css
+++ b/style.css
@@ -4432,6 +4432,7 @@ SECCION AUTORES
 
 .ultimomomento-section .ultimo-momento a h2{
     color: #111;
+    margin: 10px;
 }
 
 /* FIN DE LA SECCIÓN ÚLTIMO MOMENTO */
