--- a/sass/components/_components.sidebar.scss
+++ b/sass/components/_components.sidebar.scss
@@ -1,1 +1,10 @@
 
+.sidebarContent{
+    .sidebar__avatar{
+        margin: 0 auto;
+        img{
+            border-radius: 50%;
+            vertical-align: top;
+        }
+    }
+}
