--- a/sass/components/_components.sidebar.scss
+++ b/sass/components/_components.sidebar.scss
@@ -1,7 +1,9 @@
 
 .sidebarContent{
     .sidebar__avatar{
-        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         img{
             border-radius: 50%;
             vertical-align: top;
