--- a/sass/components/_components.containers.scss
+++ b/sass/components/_components.containers.scss
@@ -1,6 +1,6 @@
 .dashboard{
     max-width: $containerMaxWidth;
-    margin: 0 auto;
+    margin: 30px auto;
     display: grid;
     grid-template-columns: 1fr 3fr;
 }
