--- a/sass/components/_components.sidebar.scss
+++ b/sass/components/_components.sidebar.scss
@@ -14,6 +14,13 @@
             border-top: 1px solid $gray;
             border-bottom: 1px solid $gray;
             width: 100%;
+            .user__name{
+                padding: 10px 15px;
+                p{
+                    margin: 0px;
+                    font-size: 16px;
+                }
+            }
         }
     }
 }
