--- a/sass/settings/_settings.variables.scss
+++ b/sass/settings/_settings.variables.scss
@@ -1,6 +1,6 @@
 // Brand colors
-$primary:  #7FDBFF;
-$secondary: #111;
+$primary:  #e7d117;
+$secondary: #b29f93;
 
 // Base colors
 $white:  #fff;
