--- a/sass/components/_components.sidebar.scss
+++ b/sass/components/_components.sidebar.scss
@@ -30,9 +30,10 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                color: $secondary;
                 a{
                     width: 100%;
+                    color: $secondary;
+                    font-size: 18px;
                 }
             }
         }
