--- a/sass/components/_components.sidebar.scss
+++ b/sass/components/_components.sidebar.scss
@@ -30,6 +30,8 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                border-top: 1px solid $gray;
+                border-bottom: 1px solid $gray;
                 a{
                     width: 100%;
                     color: $secondary;
