--- a/sass/components/_components.sidebar.scss
+++ b/sass/components/_components.sidebar.scss
@@ -25,17 +25,21 @@
     }
     .sidebar__links{
         nav{
-            li{
-                padding: 10px 15px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-top: 1px solid $gray;
-                border-bottom: 1px solid $gray;
-                a{
-                    width: 100%;
-                    color: $secondary;
-                    font-size: 18px;
+            ul{
+                padding:0;
+                margin:0;
+                li{
+                    padding: 10px 15px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border-bottom: 1px solid $gray;
+
+                    a{
+                        width: 100%;
+                        color: $secondary;
+                        font-size: 18px;
+                    }
                 }
             }
         }
