--- a/sass/components/_components.sidebar.scss
+++ b/sass/components/_components.sidebar.scss
@@ -34,11 +34,14 @@
                     justify-content: center;
                     align-items: center;
                     border-bottom: 1px solid $gray;
-
                     a{
                         width: 100%;
                         color: $secondary;
                         font-size: 18px;
+                        transition: 300ms ease;
+                        &:hover{
+                            transform: translateX(10px);
+                        }
                     }
                 }
             }
