--- a/sass/components/_components.sidebar.scss
+++ b/sass/components/_components.sidebar.scss
@@ -29,12 +29,13 @@
                 padding:0;
                 margin:0;
                 li{
-                    padding: 10px 15px;
+                    padding: 0px 15px;
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     border-bottom: 1px solid $gray;
                     a{
+                        padding: 10px 0;
                         width: 100%;
                         color: $secondary;
                         font-size: 18px;
