--- a/sass/components/_components.sidebar.scss
+++ b/sass/components/_components.sidebar.scss
@@ -45,6 +45,7 @@
                         }
                         &.-accent{
                             background: $primary;
+                            color: $white;
                         }
                     }
                 }
