first test dashboard

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,7 @@
 // 6 - Components
 @import 'components/components.containers';
 @import 'components/components.sidebar';
+@import 'components/components.content';
 
 // 7 - Utilities
 
