--- a/sass/components/_components.content.scss
+++ b/sass/components/_components.content.scss
@@ -1,7 +1,7 @@
 .dashboard__content{
     .content__container{
         padding: 20px;
-        & .favorited{
+        .favorited{
             &__header{
                 display: flex;
                 justify-content: center;
