--- a/sass/components/_components.content.scss
+++ b/sass/components/_components.content.scss
@@ -9,6 +9,7 @@
                 h3{
                     color: $black;
                     background: $primary;
+                    padding: 10px 15px;
                 }
             }
         }
