--- a/sass/components/_components.content.scss
+++ b/sass/components/_components.content.scss
@@ -7,9 +7,10 @@
                 justify-content: center;
                 align-items: center;
                 h3{
-                    color: $black;
+                    color: $white;
                     background: $primary;
                     padding: 10px 15px;
+                    text-transform: uppercase;
                 }
             }
         }
