--- a/sass/components/_components.content.scss
+++ b/sass/components/_components.content.scss
@@ -11,6 +11,7 @@
                     background: $primary;
                     padding: 10px 15px;
                     text-transform: uppercase;
+                    font-size: 26px;
                 }
             }
         }
