--- a/sass/components/_components.content.scss
+++ b/sass/components/_components.content.scss
@@ -14,6 +14,10 @@
                     font-size: 26px;
                 }
             }
+            &__posts{
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr;
+            }
         }
     }
 }
