--- a/sass/components/_components.content.scss
+++ b/sass/components/_components.content.scss
@@ -17,6 +17,7 @@
             &__posts{
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr;
+                grid-gap: 20px;
             }
         }
     }
