--- a/sass/components/_components.content.scss
+++ b/sass/components/_components.content.scss
@@ -12,6 +12,10 @@
                     padding: 10px 15px;
                     text-transform: uppercase;
                     font-size: 26px;
+                    text-align: center;
+                    width: 100%;
+                    border-top: 1px solid $gray;
+                    border-bottom: 1px solid $gray;
                 }
             }
             &__posts{
