--- a/sass/components/_components.containers.scss
+++ b/sass/components/_components.containers.scss
@@ -1,6 +1,9 @@
 .dashboard{
     max-width: $containerMaxWidth;
+    padding-top: 30px;
     margin: 30px auto;
+    margin-top: 0px;
     display: grid;
     grid-template-columns: 1fr 3fr;
+    border-top: 4px solid #e7d117;
 }
