--- a/sass/elements/_elements.button.scss
+++ b/sass/elements/_elements.button.scss
@@ -4,9 +4,10 @@
     margin-right: 10px;
     line-height: 1;
     font-weight: 400;
-    background: #f4f4f4;
-    color: #111;
+    background: #f4f4f4 !important;
+    color: #111 !important;
     transition: 300ms ease;
+    border-radius: 4px;
     &.-accent{
         background: #e7d117;
         color: #fff;
