--- a/sass/elements/_elements.button.scss
+++ b/sass/elements/_elements.button.scss
@@ -5,14 +5,20 @@
     line-height: 1;
     font-weight: 400;
     background: #f4f4f4 !important;
-    color: #111 !important;
+    color: $black !important;
     transition: 300ms ease;
     border-radius: 4px;
     &.-accent{
-        background: #e7d117;
-        color: #fff;
+        background: $primary;
+        color: $white;
     }
     &:hover{
         opacity: 0.8;
     }
+}
+
+.btn.follow{
+    background: transparent !important;
+    border: 1px solid $white !important;
+    color: $white !important;
 }
