--- a/sass/elements/_elements.button.scss
+++ b/sass/elements/_elements.button.scss
@@ -21,4 +21,8 @@
     background: transparent !important;
     border: 1px solid $white !important;
     color: $white !important;
+    &:hover{
+        background: $white;
+        color: $black;
+    }
 }
