--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,6 +24,11 @@
 @import 'components/components.sidebar';
 @import 'components/components.content';
 
+//Plugins
+
+@import 'plugins/plugins.wppb';
+
+
 // 7 - Utilities
 
 @import 'utilities/utilities'
