--- a/sass/plugins/_plugins.wppb.scss
+++ b/sass/plugins/_plugins.wppb.scss
@@ -4,4 +4,11 @@
         padding: 0;
         margin: 20px 0;
     }
+    .wppb-form-field{
+        margin: 10px 0;
+        label{
+            display: block;
+            font-size: 20px;
+        }
+    }
 }
