links editar perfil y dashboard

--- a/sass/plugins/_plugins.wppb.scss
+++ b/sass/plugins/_plugins.wppb.scss
@@ -10,5 +10,9 @@
             display: block;
             font-size: 20px;
         }
+        select{
+            padding: 5px 15px;
+            border: 1px solid #ccc;
+        }
     }
 }
