--- a/sass/elements/_elements.button.scss
+++ b/sass/elements/_elements.button.scss
@@ -8,6 +8,7 @@
     color: $black !important;
     transition: 300ms ease;
     border-radius: 4px;
+    font-family: Arial, Helvetica, sans-serif;
     &.-accent{
         background: $primary !important;
         color: $white !important;
