--- a/sass/components/_components.sidebar.scss
+++ b/sass/components/_components.sidebar.scss
@@ -20,6 +20,7 @@
                 p{
                     margin: 0px;
                     font-size: 18px;
+                    text-align: center;
                 }
         }
     }
