--- a/sass/components/_components.sidebar.scss
+++ b/sass/components/_components.sidebar.scss
@@ -7,6 +7,7 @@
         img{
             border-radius: 50%;
             vertical-align: top;
+            margin-bottom: 10px;
         }
         &__user{
             margin-top: 20px;
