--- a/style.css
+++ b/style.css
@@ -5217,3 +5217,9 @@ ADS UPDATE 26/11/2019
 .ad-grilla img{
     vertical-align: top;
 }
+
+
+.stories .stories-logo img {
+    width: 100%;
+    border-radius: 50%;
+}
