--- a/style.css
+++ b/style.css
@@ -5222,4 +5222,5 @@ ADS UPDATE 26/11/2019
 .stories .stories-logo img {
     width: 100%;
     border-radius: 50%;
+    content: url("https://elcanciller.com/wp-content/uploads/2019/12/logo-elcanciller.jpg");
 }
