--- a/style.css
+++ b/style.css
@@ -2575,6 +2575,11 @@ ul.tagposts-list li {
 .opinion .titulo .user-actions i{
     color: #999;
     font-size: 18px;
+    cursor: pointer;
+}
+
+.opinion .titulo .user-actions i:hover{
+    color: #e7d117;
 }
 
 .opinion .titulo a {
