--- a/style.css
+++ b/style.css
@@ -2535,7 +2535,7 @@ ul.tagposts-list li {
     color: #fff;
     height: 38px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -2572,13 +2572,13 @@ ul.tagposts-list li {
     line-height: 0px;
 }
 
-.opinion .titulo .user-actions i{
+.opinion .autor .user-actions i{
     color: #999;
     font-size: 18px;
     cursor: pointer;
 }
 
-.opinion .titulo .user-actions i:hover{
+.opinion .autor .user-actions i:hover{
     color: #e7d117;
 }
 
