--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,6 +23,8 @@
 @import 'components/components.containers';
 @import 'components/components.sidebar';
 @import 'components/components.content';
+@import 'components/components.listItems';
+@import 'components/components.hiddenTopic';
 
 //Plugins
 
