--- a/sass/settings/_settings.variables.scss
+++ b/sass/settings/_settings.variables.scss
@@ -11,8 +11,8 @@ $lightGray: #f2f2f2;
 
 // Fonts
 
-$primaryFont: 'Montserrat', sans-serif;
-$secondaryFont: 'Nunito', sans-serif;
+$primaryFont: 'Bree Serif', sans-serif;
+$secondaryFont: 'Arial', sans-serif;
 
 //
 // Project Variables
