--- a/sass/components/_components.listItems.scss
+++ b/sass/components/_components.listItems.scss
@@ -3,6 +3,8 @@
         background: $primary;
         padding: 10px 15px;
         text-align: center;
+        border-radius: 4px;
+        margin-bottom: 20px;
         h3{
             color: $white;
             text-transform: uppercase;
@@ -11,6 +13,7 @@
         }
         p{
             color: $white;
+            font-family: $secondaryFont;
         }
         //Modifiers
         &.-left{
