--- a/sass/components/_components.listItems.scss
+++ b/sass/components/_components.listItems.scss
@@ -14,6 +14,7 @@
         p{
             color: $white;
             font-family: $secondaryFont;
+            font-size: 16px;
         }
         //Modifiers
         &.-left{
