--- a/sass/components/_components.listItems.scss
+++ b/sass/components/_components.listItems.scss
@@ -10,11 +10,13 @@
             text-transform: uppercase;
             font-size: 26px;
             width: 100%;
+            margin: 5px 0;
         }
         p{
             color: $white;
             font-family: $secondaryFont;
             font-size: 16px;
+            margin: 5px 0;
         }
         //Modifiers
         &.-left{
