--- a/sass/components/_components.hiddenTopic.scss
+++ b/sass/components/_components.hiddenTopic.scss
@@ -6,6 +6,7 @@
     justify-content: space-between;
     h3{
         font-size: 20px;
+        margin: 0px;
     }
     button{
         display: inline-block;
