--- a/sass/elements/_elements.button.scss
+++ b/sass/elements/_elements.button.scss
@@ -16,12 +16,16 @@
     &:hover{
         opacity: 0.8;
     }
-    &.-loading{
-        border: 5px solid $white; /* Light grey */
-        border-top: 5px solid $white; /* Blue */
+    &.-loading::before{
+        content: '';
+        position: absolute;
+        left: 50% - 20px;
+        top: 50% - 20px;
+        border: 5px solid $white; 
+        border-top: 5px solid $white; 
         border-radius: 50%;
-        width: 50px;
-        height: 50px;
+        width: 20px;
+        height: 20px;
         animation: spin 2s linear infinite;
     }
 }
