--- a/sass/elements/_elements.button.scss
+++ b/sass/elements/_elements.button.scss
@@ -21,7 +21,7 @@
         position: absolute;
         left: 50% - 20px;
         top: 50% - 20px;
-        border: 5px solid $white; 
+        border: 5px solid $primary; 
         border-top: 5px solid $white; 
         border-radius: 50%;
         width: 20px;
