--- a/sass/elements/_elements.button.scss
+++ b/sass/elements/_elements.button.scss
@@ -19,8 +19,8 @@
     &.-loading::before{
         content: '';
         position: absolute;
-        left: 50% - 20px;
-        top: 50% - 20px;
+        left: calc(50% - 20px);
+        top: calc(50% - 20px);
         border: 5px solid $primary; 
         border-top: 5px solid $white; 
         border-radius: 50%;
