--- a/sass/elements/_elements.button.scss
+++ b/sass/elements/_elements.button.scss
@@ -17,18 +17,32 @@
     &:hover{
         opacity: 0.8;
     }
-    &.-loading::before{
-        content: '';
-        position: absolute;
-        left: calc(50% - 20px);
-        top: calc(50% - 20px);
-        border: 5px solid $primary; 
-        border-top: 5px solid $white; 
-        border-radius: 50%;
-        width: 20px;
-        height: 20px;
-        animation: spin 2s linear infinite;
+    &.-loading{
+        &::after{
+            content: '';
+            position: absolute;
+            background: $primary;
+            opacity: 0.7;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+        }
+        &::before{
+            content: '';
+            position: absolute;
+            left: calc(50% - 10px);
+            top: calc(50% - 10px);
+            border: 5px solid $primary; 
+            border-top: 5px solid $white; 
+            border-radius: 50%;
+            width: 20px;
+            height: 20px;
+            animation: spin 2s linear infinite;
+            z-index: 999;
+        }
     }
+
 }
 
 .btn.follow{
