--- a/sass/elements/_elements.button.scss
+++ b/sass/elements/_elements.button.scss
@@ -10,6 +10,7 @@
     border-radius: 4px;
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
+    overflow: hidden;
     &.-accent{
         background: $primary !important;
         color: $white !important;
@@ -33,8 +34,8 @@
             position: absolute;
             left: calc(50% - 10px);
             top: calc(50% - 10px);
-            border: 5px solid $primary; 
-            border-top: 5px solid $white; 
+            border: 5px solid $white; 
+            border-top: 5px solid $primary; 
             border-radius: 50%;
             width: 20px;
             height: 20px;
