--- a/sass/elements/_elements.button.scss
+++ b/sass/elements/_elements.button.scss
@@ -28,6 +28,7 @@
             height: 100%;
             left: 0;
             top: 0;
+            transition: 300ms ease;
         }
         &::before{
             content: '';
