--- a/sass/elements/_elements.button.scss
+++ b/sass/elements/_elements.button.scss
@@ -42,6 +42,7 @@
             height: 20px;
             animation: spin 2s linear infinite;
             z-index: 999;
+            transition: 300ms ease;
         }
     }
 
