--- a/style.css
+++ b/style.css
@@ -4344,14 +4344,17 @@ article .post-content .has-content-area {
 /*noty*/
 
 .noty_body{
-    padding: 0 10px;
-    background: #e7d117;
+    padding: 10px;
+    background: #f2f2f2;
+    border-top: 2px solid #e7d117;
+    border-bottom: 2px solid #e7d117;
     color: #111;
     border-radius: 4px;
     font-size: 16px;
     line-height: 32px;
     font-family: Arial;
     box-shadow: 0px 3px 20px rgba(0,0,0,0.10);
+    margin-bottom: 10px;
 }
 
 
