--- a/sass/components/_components.listItems.scss
+++ b/sass/components/_components.listItems.scss
@@ -35,4 +35,8 @@
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 20px;
     }
+
+    &.-marginTop{
+        margin-top: 20px;
+    }
 }
