--- a/sass/components/_components.listItems.scss
+++ b/sass/components/_components.listItems.scss
@@ -31,6 +31,8 @@
             background-position: 47% 30%;
             background-size: cover;
             height: 200px;
+            border-top: 4px solid $primary;
+            border-bottom: 4px solid $primary;
             h3{
                 color: $black;
             }
