--- a/sass/components/_components.listItems.scss
+++ b/sass/components/_components.listItems.scss
@@ -1,6 +1,6 @@
 .listItems{
     &__header{
-        background: $primary;
+        background-color: $primary;
         padding: 10px 15px;
         text-align: center;
         border-radius: 4px;
@@ -30,6 +30,7 @@
         &.-author{
             background-position: 47% 30%;
             background-size: cover;
+            background-color: transparent;
             height: 200px;
             border-top: 4px solid $primary;
             border-bottom: 4px solid $primary;
