--- a/sass/components/_components.listItems.scss
+++ b/sass/components/_components.listItems.scss
@@ -35,7 +35,7 @@
             border-top: 4px solid $primary;
             border-bottom: 4px solid $primary;
             h3{
-                color: $black;
+                color: $gray;
             }
         }
     }
