--- a/sass/plugins/_plugins.wppb.scss
+++ b/sass/plugins/_plugins.wppb.scss
@@ -15,4 +15,9 @@
             border: 1px solid #ccc;
         }
     }
+    .input{
+        border: 0px !important;
+        outline: 0 !important;
+        border-bottom: 1px solid #ccc !important;
+    }
 }
