--- a/sass/plugins/_plugins.wppb.scss
+++ b/sass/plugins/_plugins.wppb.scss
@@ -15,7 +15,7 @@
             border: 1px solid #ccc;
         }
     }
-    .input{
+    input{
         border: 0px !important;
         outline: 0 !important;
         border-bottom: 1px solid #ccc !important;
