--- a/sass/plugins/_plugins.wppb.scss
+++ b/sass/plugins/_plugins.wppb.scss
@@ -15,7 +15,8 @@
         }
         select{
             padding: 5px 15px;
-            border: 1px solid #ccc;
+            border: 0px solid #ccc;
+            border-bottom: 1px solid #ccc !important;
         }
     }
     input{
