--- a/sass/plugins/_plugins.wppb.scss
+++ b/sass/plugins/_plugins.wppb.scss
@@ -16,6 +16,7 @@
         select{
             padding: 5px 15px;
             border: 0px solid #ccc;
+            outline: 0 !important;
             border-bottom: 1px solid #ccc !important;
         }
     }
