--- a/sass/plugins/_plugins.wppb.scss
+++ b/sass/plugins/_plugins.wppb.scss
@@ -22,6 +22,7 @@
             font-size: 18px;
             font-weight: 300;
             padding: 10px 5px;
+            width: 100%;
         }
     }
     input{
@@ -31,5 +32,6 @@
         font-size: 18px;
         font-weight: 300;
         padding: 10px 5px;
+        width: 100%;
     }
 }
