--- a/sass/plugins/_plugins.wppb.scss
+++ b/sass/plugins/_plugins.wppb.scss
@@ -34,4 +34,10 @@
         padding: 10px 5px;
         width: 100%;
     }
+
+    input, select{
+        &:focus, &:active{
+            border-color: $primary !important;
+        }
+    }
 }
