--- a/sass/plugins/_plugins.wppb.scss
+++ b/sass/plugins/_plugins.wppb.scss
@@ -23,6 +23,7 @@
             font-weight: 300;
             padding: 10px 5px;
             width: 100%;
+            transition: 300ms ease;
         }
     }
     input{
@@ -33,6 +34,7 @@
         font-weight: 300;
         padding: 10px 5px;
         width: 100%;
+        transition: 300ms ease;
     }
 
     input, select{
