--- a/sass/plugins/_plugins.wppb.scss
+++ b/sass/plugins/_plugins.wppb.scss
@@ -42,4 +42,8 @@
             border-color: $primary !important;
         }
     }
+
+    input[disabled]{
+        background-color: #f2f2f2;
+    }
 }
