--- a/sass/plugins/_plugins.wppb.scss
+++ b/sass/plugins/_plugins.wppb.scss
@@ -13,6 +13,7 @@
             display: block;
             font-size: 14px;
             opacity: 0.9;
+            margin-bottom: 5px;
         }
         select{
             padding: 5px 15px;
