--- a/sass/plugins/_plugins.wppb.scss
+++ b/sass/plugins/_plugins.wppb.scss
@@ -6,6 +6,13 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 30px;
+        @media(max-width: 990px){
+            grid-template-columns: 1fr 1fr ;
+        }
+        @media(max-width: 400px){
+            grid-template-columns: 1fr;
+        }
+    }
     }
     .wppb-form-field{
         margin: 10px 0;
