--- a/sass/plugins/_plugins.wppb.scss
+++ b/sass/plugins/_plugins.wppb.scss
@@ -55,6 +55,6 @@
     }
 }
 
-#wppb-user-to-edit, label[for="edit_user"]{
+.wppb-user-to-edit, label[for="edit_user"]{
     display: none !important;
 }
