--- a/sass/plugins/_plugins.wppb.scss
+++ b/sass/plugins/_plugins.wppb.scss
@@ -55,6 +55,6 @@
     }
 }
 
-#select_user_to_edit_form{
+.select2.select2-container.select2-container--default .wppb-user-to-edit, label[for="edit_user"]{
     display: none !important;
 }
