--- a/style.css
+++ b/style.css
@@ -465,6 +465,16 @@ h2:before {
     align-items: center;
 }
 
+@media(max-width: 980px){
+    .current-user-avatar{
+        display: none;
+    }
+
+    .current-user-avatar.-mobileuser{
+        display: flex;
+    }
+}
+
 .menu-bar {
     display: flex;
     justify-content: space-between;
